garage/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-deploy
  namespace: garage
  labels:
    app: garage-deploy
spec:
  selector:
    matchLabels:
      app: garage-deploy
  replicas: 1
  template:
    metadata:
      labels:
        app: garage-deploy
    spec:
      containers:
        - name: garage-deploy
          image: dxflrs/garage:v2.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3900
            - containerPort: 3902
            - containerPort: 3903
          volumeMounts:
            - name: garage-meta-pvc
              mountPath: /mnt/meta
            - name: garage-data-pvc
              mountPath: /mnt/data
            - name: garage-config
              mountPath: /etc/garage.toml
              subPath: garage.toml
              readOnly: true
      volumes:
        - name: garage-config
          secret:
            secretName: garage-secret
            items:
              - key: garage.toml
                path: garage.toml
        - name: garage-meta-pvc
          persistentVolumeClaim:
            claimName: garage-meta-pvc
        - name: garage-data-pvc
          persistentVolumeClaim:
            claimName: garage-data-pvc
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-ui
  namespace: garage
  labels:
    app: garage-ui
spec:
  selector:
    matchLabels:
      app: garage-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: garage-ui
    spec:
      containers:
        - name: garage-ui
          image: khairul169/garage-webui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3909
          volumeMounts:
            - name: garage-config
              mountPath: /etc/garage.toml
              subPath: garage.toml
              readOnly: true
      volumes:
        - name: garage-config
          secret:
            secretName: garage-secret
            items:
              - key: garage.toml
                path: garage.toml
      restartPolicy: Always
